--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MR Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-    <script src="index.js"></script>
+  <header class="reveal">
+    <h1>MR Portfolio</h1>
+    <p>Front-end Developer | Accessibility Advocate</p>
+  </header>
+
+  <section class="reveal">
+    <h2>About Me</h2>
+    <p>I specialize in semantic HTML, responsive design, and accessible web experiences.</p>
+  </section>
+
+  <section class="reveal">
+    <h2>Projects</h2>
+    <ul>
+      <li>Accessible Form Design</li>
+      <li>Responsive Landing Page</li>
+      <li>JavaScript Quiz App</li>
+    </ul>
+  </section>
+
+  <section class="reveal">
+    <h2>Contact</h2>
+    <p>Email: mr@example.com</p>
+  </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
