--- a/index.html
+++ b/index.html
@@ -5,31 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MR Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
-  <header class="reveal">
-    <h1>MR Portfolio</h1>
-    <p>Front-end Developer | Accessibility Advocate</p>
-  </header>
-
-  <section class="reveal">
-    <h2>About Me</h2>
-    <p>I specialize in semantic HTML, responsive design, and accessible web experiences.</p>
-  </section>
-
-  <section class="reveal">
-    <h2>Projects</h2>
-    <ul>
-      <li>Accessible Form Design</li>
-      <li>Responsive Landing Page</li>
-      <li>JavaScript Quiz App</li>
-    </ul>
-  </section>
-
-  <section class="reveal">
-    <h2>Contact</h2>
-    <p>Email: mr@example.com</p>
-  </section>
+  <div class="hero-header">
+    <div class="wrapper">
+      <header>
+        <div class="logo">
+         <i class="fa-solid fa-a"></i>
+         <div class="logo-text">ABDUL REHMAN</div>
+        </div>
+        <nav>
+          <div class="togglebtn">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <ul class="navlinks">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Resume</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
