--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
-<body>
+<!-- <body>
   <div class="hero-header">
     <div class="wrapper">
       <header>
@@ -30,7 +30,10 @@
         </nav>
       </header>
     </div>
-  </div>
+  </div> -->
+<a href=""onmouseover="alert('hi')" >click me</a>
+
+
 
   <script src="script.js"></script>
 </body>
