--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </div>
   </div> -->
 
-  
-<a href=""onmouseover ="alert('hi')" >click me</a>
-<a href="" onclick="alert('hi')">click me</a>
 
+<!-- <a href=""onmouseover ="alert('hi')" >click me</a>
+<a href="" onclick="alert('hi')">click me</a> -->
 
+<a href=""onmouseover="var messege = 'hello' ; alert(messege)">click me</a>
 
 
  
