--- a/index.html
+++ b/index.html
@@ -38,8 +38,15 @@
 
 <a href=""onmouseover="var messege = 'hello' ; alert(messege)">click me</a>
 
-
+<a href="" onclick="myfun('hello');">click</a>
  
- <script src="script.js"></script>
+<img src="./Screenshot 2025-12-17 214239.png" onclick="src='Screenshot 2025-12-17 214239.png' " >
+
+
+ <script>
+  function myfun(messege){
+    alert(messege)
+  }
+ </script>
 </body>
 </html>
