--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@
 <a href=""onmouseover="var messege = 'hello' ; alert(messege)">click me</a>
 
 <a href="" onclick="myfun('hello');">click</a>
- 
-<img src="./Screenshot 2025-12-17 214239.png" onclick="src='Screenshot 2025-12-17 214239.png' " >
 
+
+<img src="Screenshot 2025-12-17 214239.png" alt="" width="150px" onclick="alert('hello')">
 
  <script>
-
-
   function myfun(messege){
     alert(messege)
   }
