--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <a href="" onclick="myfun('hello');">click</a>
 
 
-<img src="Screenshot 2025-12-17 214239.png" alt="" width="150px" onclick="alert('hello')">
+<img src="Screenshot 2025-12-17 214239.png" alt="" width="150px" onclick="src='Screenshot 2025-12-22 190026.png'">
 
  <script>
   function myfun(messege){
