--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 <a href=""onmouseover="var messege = 'hello' ; alert(messege)">click me</a>
 
-<a href="" onclick="myfun('hello');">click</a>
-
+<a href="" onclick="myfun('hello');">click</a> <!--is ko bolte hian element-->
+<!-- tags ko bolten hain nodes -->
 
 <img src="Screenshot 2025-12-17 214239.png" alt="" width="150px" onmouseover="src='Screenshot 2025-12-22 190026.png'">
 
