--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
 
 
- <script>
-  function myfun(messege){
-    alert(messege)
-  }
- </script>
+ <script src="script.js"></script>
+  // function myfun(messege){
+  //   alert(messege)
+  // }
+
 </body>
 </html>
 
