--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
 
  <script src="script.js"></script>
-  // function myfun(messege){
+  <!-- // function myfun(messege){
   //   alert(messege)
-  // }
+  // } -->
 
 </body>
 </html>
